force-app/main/default/objects/RMS_Account_Group__c/RMS_Account_Group__c.object-meta.xml
<CustomObject>
    <description>Account Group, such as YY or Belle</description>
    <label>RMS Account Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMS Account Group</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>