force-app/main/default/objects/RMS_Account_Group__c/fields/AG_Code__c.field-meta.xml
<CustomField>
    <fullName>AG_Code__c</fullName>
    <externalId>true</externalId>
    <label>AG Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>