force-app/main/default/objects/RMS_Account_Group__c/fields/CFS_Owner__c.field-meta.xml
<CustomField>
    <fullName>CFS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CFS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMS_Account_Group</relationshipName>
    <type>Lookup</type>
</CustomField>