force-app/main/default/objects/RMS_Account_Group__c/fields/Digital_Owner__c.field-meta.xml
<CustomField>
    <fullName>Digital_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Digital Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RMS_Account_Group1</relationshipName>
    <type>Lookup</type>
</CustomField>