force-app/main/default/objects/RMS_Account_Group__c/fields/Sub_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Name__c</fullName>
    <formula>RIGHT(Name, LEN(Name) - FIND(&quot;)&quot;, Name))</formula>
    <label>Sub Name</label>
    <type>Text</type>
</CustomField>